@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-11-11T00:42:58Z",
+  "timestamp" : "2023-11-11T08:11:10Z",
   "count_outdated" : 1444,
   "uniques_outdated" : 784,
-  "count" : 1477,
-  "uniques" : 801,
+  "count" : 1478,
+  "uniques" : 802,
   "clones" : [
     {
       "timestamp": "2023-10-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
